-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 4.7.2
-
Fix Version/s: 4.7.4
-
Component/s: GUI: Text handling
-
Labels:None
-
Environment:Arch Linux on x86_64 computer using Qt and KDE packages compiled from latest trunk.
-
Commits:22995948cd3f46780be5d8016708aeef0cd7b066
The patch in Qt-bug 231 which replaced linear search with a binary search seems to have introduced an off-by-one error into the code in two places. This bug manifests itself as a crash in koffice when compiled against Qt from trunk if you hit the "tab" key on a new line in the text shape.
I have added a comment to that bug report and attached a patch which I will also attach here.
I have also created a bug report on bugs.kde.org (bug #265369) and linked it to this bug report.